# captylize

./: .gitignore  LICENSE  MODELS.md  README.md  pyproject.toml  run_dev.sh
captylize/: logger.py
captylize/app/: http_client.py  main.py  utils.py
captylize/app/dependencies/: ml_models.py
captylize/app/dtos/: shared.py
captylize/app/dtos/analyses/: request.py  response.py
captylize/app/dtos/generations/: request.py  response.py
captylize/app/routers/: analyses.py  generations.py  shared.py
captylize/ml/: manager.py
captylize/ml/models/: caption_model.py  config.py  img_to_text_model.py  ml_model.py  model_registry.py  registry.py  vit_model.py
captylize/ml/models/analyses/: age.py  emotion.py  nsfw.py
captylize/ml/models/caption/advanced/: base.py  florence_2.py
captylize/ml/models/caption/basic/: base.py  vit_gpt2_image_captioning.py
captylize/ml/utils/: timing.py
